# 3D_model_maker

./: CMakeLists.txt  package.xml
include/: calcAverage.hpp  editCloud.hpp  getFrame.hpp  getRotationVector.hpp  make_ply.hpp  octree.hpp  registration_pc.hpp  voxel_size.xml
launch/: rs_camera_multi.launch
src/: calcAverage.cpp  editCloud.cpp  getFrame.cpp  getRotationVector.cpp  loadParams.hpp  loadVoxelSize.hpp  make_ply.cpp  octree.cpp  registration_pc.cpp  setting.xml
